[GStreamer] Memory leaks in MediaPlayerPrivateGStreamer https://bugs.webkit.org/show_bug.cgi?id=113762

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-04-02
Reviewed by Philippe Normand.

Don't leak strings returned by gst_element_get_name() and
gst_missing_plugin_message_get_installer_detail().

No new tests. No change in behavior.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::setAudioStreamProperties):
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

Canonical link: https://commits.webkit.org/132159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147490 268f45cc-cd09-0410-ab3c-d52691b4dbfc